{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 370,
  "lineage": "3e28fc72-0d12-e082-8669-8f1a3149b332",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca6c5531f38ae44f",
            "domain": "vpc",
            "id": "eipalloc-0ca6c5531f38ae44f",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-133-196-12.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.196.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ca13f26f5df5351",
            "domain": "vpc",
            "id": "eipalloc-06ca13f26f5df5351",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-20-200-54.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.200.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:internet-gateway/igw-0602596a00c4393a8",
            "id": "igw-0602596a00c4393a8",
            "owner_id": "353472581086",
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:353472581086:loadbalancer/app/jenkins-on-ecs-fargate/63e1328a94d16e89",
            "arn_suffix": "app/jenkins-on-ecs-fargate/63e1328a94d16e89",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-on-ecs-fargate-1516577445.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:353472581086:loadbalancer/app/jenkins-on-ecs-fargate/63e1328a94d16e89",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-on-ecs-fargate",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a6c5fd7af2e52961"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c2122542ac90054"
              },
              {
                "subnet_id": "subnet-0d6a06c67c5fd9ef5"
              }
            ],
            "subnets": [
              "subnet-09c2122542ac90054",
              "subnet-0d6a06c67c5fd9ef5"
            ],
            "vpc_id": "vpc-044cc2a2bff7f3b57",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:353472581086:listener/app/jenkins-on-ecs-fargate/63e1328a94d16e89/07e8c23f2cc3de0d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:353472581086:targetgroup/jenkins-on-ecs-fargate/99ed74d5dc0e36d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:353472581086:listener/app/jenkins-on-ecs-fargate/63e1328a94d16e89/07e8c23f2cc3de0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:353472581086:loadbalancer/app/jenkins-on-ecs-fargate/63e1328a94d16e89",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:353472581086:targetgroup/jenkins-on-ecs-fargate/99ed74d5dc0e36d6",
            "arn_suffix": "targetgroup/jenkins-on-ecs-fargate/99ed74d5dc0e36d6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:353472581086:targetgroup/jenkins-on-ecs-fargate/99ed74d5dc0e36d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-on-ecs-fargate",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca6c5531f38ae44f",
            "association_id": "eipassoc-0b719920dc93a79f3",
            "connectivity_type": "public",
            "id": "nat-0decb35ce63a964a1",
            "network_interface_id": "eni-031796e94ecfc9a52",
            "private_ip": "192.168.0.207",
            "public_ip": "3.133.196.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6a06c67c5fd9ef5",
            "tags": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2a"
            },
            "tags_all": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2a"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ca13f26f5df5351",
            "association_id": "eipassoc-042841df973db4603",
            "connectivity_type": "public",
            "id": "nat-041d33539d99fcf9f",
            "network_interface_id": "eni-09ee7b5473c3c1819",
            "private_ip": "192.168.1.156",
            "public_ip": "3.20.200.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c2122542ac90054",
            "tags": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2b"
            },
            "tags_all": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2b"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e07ffbabb7856cd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0decb35ce63a964a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e07ffbabb7856cd4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026cbf43ec7c4a1bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-041d33539d99fcf9f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026cbf43ec7c4a1bf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0602596a00c4393a8",
            "id": "r-rtb-094824496ad352cf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094824496ad352cf7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:route-table/rtb-0e07ffbabb7856cd4",
            "id": "rtb-0e07ffbabb7856cd4",
            "owner_id": "353472581086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2a"
            },
            "tags_all": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:route-table/rtb-026cbf43ec7c4a1bf",
            "id": "rtb-026cbf43ec7c4a1bf",
            "owner_id": "353472581086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2b"
            },
            "tags_all": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:route-table/rtb-094824496ad352cf7",
            "id": "rtb-094824496ad352cf7",
            "owner_id": "353472581086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ef2522ad51c095",
            "route_table_id": "rtb-0e07ffbabb7856cd4",
            "subnet_id": "subnet-01b5e439f036e607f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0682e63ab2dc787ac",
            "route_table_id": "rtb-026cbf43ec7c4a1bf",
            "subnet_id": "subnet-0fab851963855b4ac"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da769f348eee8b5",
            "route_table_id": "rtb-094824496ad352cf7",
            "subnet_id": "subnet-0d6a06c67c5fd9ef5"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08347c90b5f122353",
            "route_table_id": "rtb-094824496ad352cf7",
            "subnet_id": "subnet-09c2122542ac90054"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:security-group/sg-0a6c5fd7af2e52961",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a6c5fd7af2e52961",
            "ingress": [],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "353472581086",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_jenkins_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:security-group/sg-09e5aa62bef7ca009",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09e5aa62bef7ca009",
            "ingress": [],
            "name": "ecs-jenkins-agents",
            "name_prefix": "",
            "owner_id": "353472581086",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:security-group/sg-0c72be0e590f3b185",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c72be0e590f3b185",
            "ingress": [],
            "name": "ecs-jenkins-controller",
            "name_prefix": "",
            "owner_id": "353472581086",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:security-group/sg-021c5b9246333deec",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-021c5b9246333deec",
            "ingress": [],
            "name": "efs",
            "name_prefix": "",
            "owner_id": "353472581086",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "agent_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1897702369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09e5aa62bef7ca009",
            "security_group_rule_id": "sgr-0f9066b1997273ad2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_jenkins_agent",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-108521486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c72be0e590f3b185",
            "security_group_rule_id": "sgr-014fcb9560931924c",
            "self": false,
            "source_security_group_id": "sg-0a6c5fd7af2e52961",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1653100899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a6c5fd7af2e52961",
            "security_group_rule_id": "sgr-05a74ddbf49b9630a",
            "self": false,
            "source_security_group_id": "sg-0c72be0e590f3b185",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-4257197278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021c5b9246333deec",
            "security_group_rule_id": "sgr-005ae15fee861341d",
            "self": false,
            "source_security_group_id": "sg-0c72be0e590f3b185",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_security_group.efs",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1579375783",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a6c5fd7af2e52961",
            "security_group_rule_id": "sgr-02314d43f868833e1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_agent_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 50000,
            "id": "sgrule-2991606289",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c72be0e590f3b185",
            "security_group_rule_id": "sgr-0ebd61545a9e5fcab",
            "self": false,
            "source_security_group_id": "sg-09e5aa62bef7ca009",
            "timeouts": null,
            "to_port": 50000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_jenkins_agent",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3973009630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c72be0e590f3b185",
            "security_group_rule_id": "sgr-0b7ff73d401d6d318",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:subnet/subnet-01b5e439f036e607f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b5e439f036e607f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353472581086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2a"
            },
            "tags_all": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2a"
            },
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:subnet/subnet-0fab851963855b4ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fab851963855b4ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353472581086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2b"
            },
            "tags_all": {
              "Name": "private-jenkins-on-ecs-fargate-us-east-2b"
            },
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:subnet/subnet-0d6a06c67c5fd9ef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a06c67c5fd9ef5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353472581086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-jenkins-on-ecs-fargate-us-east-2a"
            },
            "tags_all": {
              "Name": "public-jenkins-on-ecs-fargate-us-east-2a"
            },
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:subnet/subnet-09c2122542ac90054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2122542ac90054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353472581086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-jenkins-on-ecs-fargate-us-east-2b"
            },
            "tags_all": {
              "Name": "public-jenkins-on-ecs-fargate-us-east-2b"
            },
            "vpc_id": "vpc-044cc2a2bff7f3b57"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:353472581086:vpc/vpc-044cc2a2bff7f3b57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-054964b314f9f86b8",
            "default_route_table_id": "rtb-026266d6c909aa9da",
            "default_security_group_id": "sg-002e063fae7f77f64",
            "dhcp_options_id": "dopt-001fb107b78dd6dc1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044cc2a2bff7f3b57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026266d6c909aa9da",
            "owner_id": "353472581086",
            "tags": {
              "Name": "jenkins-on-ecs-fargate"
            },
            "tags_all": {
              "Name": "jenkins-on-ecs-fargate"
            }
          }
        }
      ]
    }
  ]
}